--- a/Feedbacksystem/static/css/facultypage.css
+++ b/Feedbacksystem/static/css/facultypage.css
@@ -1,10 +1,8 @@
 
-body{
-  background-color:  #faf5fF;
-}
 #headerbar{
     padding: 10px;
     background-color: #2a9134;
+    
  
 }
 #headerlogo{
@@ -14,19 +12,25 @@ body{
     text-transform: uppercase;
   margin-left: 50px;
 }
+
+a{
+  color: black;
+  text-decoration: none;
+
+}
+#profile_name:hover{
+  text-decoration: underline;
+}
+a:hover {
+
+  cursor: pointer;
+}
 #cvsulogo{
     margin-right: 20px;
 }
 .subtitle{
     font-size: 14px;
     margin-left: 90px;
-
-
-}
-#cvsulogin{
-    margin-right: 100px;
-    letter-spacing: 1px;
-    background-color: #025400;
 
 }
 main {
@@ -38,63 +42,64 @@ main {
   box-sizing: border-box;
   box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.2);
   max-height: 200%;
-  min-height: 70vh;
+  min-height: 80vh;
   overflow-y: hidden; /* Hide scrollbar for sidebar */
 }
 .nav-item {/* Add padding to the items */
-  margin: 15px; /* Add margin to create space between items */ 
-}
+    margin: 20px; /* Add margin to create space between items */
+    
+    
+  }
 .nav-link{
-  color: #333;
+    color: #333;
 }
 .nav-link:hover {
-  background-color: #fafafa !important;
-  color: darkgreen !important;
-}
-.flex-column li a{
-  background-color: #fafafa;
-  &:focus, &:active {
-    color:darkgreen;
-    background-color:  #fafafa;
-    -webkit-box-shadow: none;
-    -moz-box-shadow: none;
-    box-shadow: none;
- }
+    background-color: #fafafa !important;
+    color: #025400 !important;
+  }
+  .flex-column li a{
+    background-color: #fafafa;
+    &:focus, &:active {
+      color: #025400;
+      background-color:  #fafafa;
+      -webkit-box-shadow: none;
+      -moz-box-shadow: none;
+      box-shadow: none;
+
+  }
 }
 .nav-pills > li > a.active {
-background-color: #fafafa !important;
-color: darkgreen !important;
+  background-color: #fafafa !important;
+  color: #025400 !important;
 }
 
 
+/* Green color when active */
 .nav-link.dropdown-toggle:active,
 .nav-link.dropdown-toggle:focus {
-color: darkgreen !important;
+  color: #025400 !important; /* Green color when active */
 }
+#main-content {
+    flex: 1;
+    padding: 16px;
+  }
+  #navbarDropdown{
+    font-weight: bold;
+  }
 
   #eval{
     padding: 10px;
     box-sizing: border-box;
     box-shadow: 2px 2px 5px 3px rgba(0,0,0,0.2);
-    height: 160px;
+    height: 140px;
   }
-  #grid{
+
+  #profile{
     padding: 10px;
     box-sizing: border-box;
     box-shadow: 2px 2px 5px 3px rgba(0,0,0,0.2);
-    height: 75px;
-    width: 45%;
-    display: inline-block;
-    margin-bottom: 10px;
+    height: auto;
+    width: 350px;
+    float: left;
+    text-align: center;
   }
-  #gridtwo{
-    padding: 10px;
-    box-sizing: border-box;
-    box-shadow: 2px 2px 5px 3px rgba(0,0,0,0.2);
-    height: 75px;
-    width: 45%;
-    display: inline-block;
-    margin-left: 10px;
-    margin-top: 10px;
-  }
-  
