--- a/Feedbacksystem/templates/pages/admin.html
+++ b/Feedbacksystem/templates/pages/admin.html
@@ -22,7 +22,7 @@
     <div style="display: flex; align-items: center; background-color: #2a9134; margin: 0; width: 100%; height: 20vh;">
         <a class="navbar-brand" style="color: #fafafa;" href="{% url 'home' %}" id="headerlogo">
             <img src="{% static 'images/cvsulogo.png'%}" alt="Cavite State Univeristy Logo" width="64px" height="64px" id="cvsulogo"> Feedback and Evaluation System 
-            <div class="subtitle">Cavite State University Bacoor City Campus</div>
+            <div class="subtitle">Cavite State University - Bacoor Campus</div>
         </a>
         <div style="margin-left: 30rem;">
           {% if faculty.profile_picture %}
@@ -41,7 +41,7 @@
     <nav id="sidebar" class="col-md-3 col-lg-2 d-md-block sidebar lightsidebar"> 
       <ul class="nav flex-column nav-pills">
         <li class="nav-item">
-          <a class="nav-link {% if request.path == '/admin' %} active {% endif %}" href="/admin">
+          <a class="nav-link {% if request.path == '/admin' %} active {% endif %}" href="/administrator">
           <i class="bi bi-grid-1x2-fill"></i> <b>DASHBOARD</b>
         
         
