--- a/Feedbacksystem/templates/pages/home.html
+++ b/Feedbacksystem/templates/pages/home.html
@@ -23,7 +23,7 @@
     <div style="display: flex; align-items: center; background-color: #2a9134; margin: 0; width: 100%; height: 20vh;">
         <a class="navbar-brand" style="color: #fafafa;" href="{% url 'home' %}" id="headerlogo">
             <img src="{% static 'images/cvsulogo.png'%}" alt="Cavite State Univeristy Logo" width="64px" height="64px" id="cvsulogo"> Feedback and Evaluation System 
-            <div class="subtitle">Cavite State University Bacoor City Campus</div>
+            <div class="subtitle">Cavite State University - Bacoor Campus</div>
         </a>
         <div style="margin-left: 30rem;">
           {% if student.profile_picture %}
